# Advanced-Programming

CA1/kingdom/: exe  functions.cpp  header_king.hpp  main.cpp  makefile  program
CA1/kingdom/assets/levels/1/: level1-waves.txt
CA1/kingdom/assets/levels/2/: level2-waves.txt
CA2/market/: Factor.cpp  Factor.h  Factor_Good.cpp  Factor_Good.h  Good.cpp  Good.h  Request.cpp  Request.h  Request_Good.cpp  Request_Good.h  Store.cpp  Store.h  User.cpp  User.h  a.out  exe  functions.cpp  functions.h  header.h  inti_inputs  main.cpp  makefile
CA3/Mafia/: CMakeLists.txt  Detective.cpp  Detective.h  Doctor.cpp  Doctor.h  Game.cpp  Game.h  Godfather.cpp  Godfather.h  Joker.cpp  Joker.h  Player.cpp  Player.h  Room.cpp  Room.h  RouinTan.cpp  RouinTan.h  Silencer.cpp  Silencer.h  Simple_mafia.cpp  Simple_mafia.h  Simple_villager.cpp  Simple_villager.h  Vote.cpp  Vote.h  a.out  functions.cpp  functions.h  main.cpp  makefile  testcase.txt
CA4/Drive/: Handler.cpp  Handler.hpp  main.cpp  makefile  my_server.hpp  myserver.out
CA4/Drive/server/: server.cpp
CA4/Drive/static/: elementList.html  login.css  login.html  new_directory.css  new_directory.html  signup.html  upload.html
CA4/Drive/system/: .makefile.swp  CLUTTER_IM_MODULE=xim  CMakeLists.txt  Directory.cpp  Directory.h  File.cpp  File.h  FileSystem.cpp  FileSystem.h  Group.cpp  Group.h  System.cpp  System.hpp  Tools.cpp  Tools.h  User.cpp  User.h  main.cpp  makefile
